--- a/tcm/modules/web/src/main/webapp/pages/consumer/saved/details.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/saved/details.xhtml
@@ -16,18 +16,17 @@
     <p:outputPanel style="border: 0px; padding: 0px; margin: 0px">
         <p:panelGrid styleClass="invNBgrid">
             <p:row>
-                <p:column style="width: 40%">
-                    <p:outputLabel value="Asset Allocation" style="font-weight: bold"/>
+                <p:column style="width: 20%">
+                    <p:outputLabel value="Portfolio Risk" style="font-weight: bold"/>
                 </p:column>
-                <p:column style="text-align: left; width: 60%">
+                <p:column style="text-align: left; width: 70%">
 <!--
                     <p:spinner value="" min="0" max="100" maxlength="3" size="3"
-                               valueChangeListener="" update=":advisorEditForm:workArea">
-                    </p:spinner>
+                               valueChangeListener="" update=":advisorEditForm:workArea"/>
 -->
-                    <h:inputHidden id="allocSlider" value="#{cepb.allocationIndex}" />
-                    <p:slider for="allocSlider" style="width: 90%">
-                        <p:ajax event="slideEnd" listener="#{cepb.onAllocSlider}" update=":advisorEditForm:workArea,:advisorEditForm:dPanel1"/>
+                    <h:inputHidden id="portfolioSlider" value="#{cepb.portfolioIndex}" />
+                    <p:slider for="portfolioSlider" style="width: 70%">
+                        <p:ajax event="slideEnd" listener="#{cepb.onPortfolioSlider}" update=":advisorEditForm:workArea,:advisorEditForm:dPanel1"/>
                     </p:slider>
 
                 </p:column>
@@ -36,17 +35,18 @@
                 </p:column>
             </p:row>
         </p:panelGrid>
-        <p:tabView widgetVar="graphTabView"
-                   styleClass="charts"
+        <p:tabView widgetVar="detailTabView"
+                   style="border: 1px solid black;"
                    dynamic="true" cache="false">
-            <p:tab id="graphtab1" title="Allocation">
-                <ui:include src="/pages/consumer/pieChart.xhtml"/>
+            <p:tab title="Summary">
+                <ui:include src="/pages/consumer/saved/subclassdetails.xhtml"/>
             </p:tab>
 
-            <p:tab id="graphtab2" title="Projection" disabled="true">
-                <ui:include src="/pages/consumer/lineChart.xhtml"/>
+            <p:tab title="Portfolio">
+                <ui:include src="/pages/consumer/saved/portfoliodetails.xhtml"/>
             </p:tab>
         </p:tabView>
+
     </p:outputPanel>
 </h:body>
 </html>
