--- a/tcm/modules/web/src/main/webapp/pages/consumer/saved/edit.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/saved/edit.xhtml
@@ -27,18 +27,18 @@
                     <h:form id="advisorEditForm">
                         <p:growl id="advisorEditgrowl" showDetail="true" sticky="true" escape="true"/>
 
-                        <p:panel id="dpanel1" styleClass="dpanel1">
+                        <p:panel styleClass="dpanel1">
                             <ui:include src="/pages/consumer/consumerProfilePanel.xhtml"/>
                         </p:panel>
 
-                        <p:panel id="dpanel2" styleClass="dpanel2" style="border: 0px" rendered="#{webutil.hasAccess('ADVISOR')}">
+                        <p:panel styleClass="dpanel2" style="border: 0px" rendered="#{webutil.hasAccess('ADVISOR')}">
                             <ui:include src="/pages/consumer/advisorProfilePanel.xhtml"/>
                         </p:panel>
 
                         <div class="dDataArea">
                             <p:outputPanel id="workArea" styleClass="dDataArea">
                                 <div class="dGraphArea">
-                                    <ui:include src="/pages/consumer/graphs.xhtml"/>
+                                    <ui:include src="/pages/consumer/saved/graphs.xhtml"/>
                                 </div>
 
                                 <div class="dDetailArea">
