--- a/tcm/modules/web/src/main/webapp/pages/consumer/saved/add-save.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/saved/add-save.xhtml
@@ -19,7 +19,7 @@
     <ui:composition template="/template/common/backup/layout.xhtml/common/layout.xhtml">
         <ui:define name="content">
 
-            <div id="main-content" class="content_section" style="background-color: #fff; padding: 10px;">
+            <div id="main-content" class="content_section" style="background-color: #f5f5f5; padding: 10px;">
                 <div id="wrapper" class="container">
                     <p:messages/>
 
@@ -30,19 +30,19 @@
                             </p:tab>
 
                             <p:tab id="tab2" title="Financials">
-                                <ui:include src="/pages/consumer/debtandliabilities.xhtml"/>
+                                <ui:include src="/pages/consumer/saved/debtandliabilities.xhtml"/>
                             </p:tab>
 
-                            <p:tab id="tab3" title="Risk Tolerance" >
-                                <ui:include src="/pages/consumer/risktolerance.xhtml"/>
+                            <p:tab id="tab3" title="Risk tolerance" >
+                                <ui:include src="/pages/consumer/saved/risktolerance.xhtml"/>
                             </p:tab>
 
                             <p:tab id="tab4" title="Asset Allocation" >
-                                <ui:include src="/pages/consumer/alloc.xhtml"/>
+                                <ui:include src="/pages/consumer/saved/alloc.xhtml"/>
                             </p:tab>
 
                             <p:tab id="tab5" title="Portfolio" >
-                                <ui:include src="/pages/consumer/tradeReview.xhtml"/>
+                                <ui:include src="/pages/consumer/saved/tradeReview.xhtml"/>
                             </p:tab>
 
                             <p:tab id="tab6" title="Funding">
