--- a/tcm/modules/web/src/main/webapp/pages/consumer/saved/graphs.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/saved/graphs.xhtml
@@ -16,17 +16,18 @@
     <p:outputPanel style="border: 0px; padding: 0px; margin: 0px">
         <p:panelGrid styleClass="invNBgrid">
             <p:row>
-                <p:column style="width: 20%">
-                    <p:outputLabel value="Portfolio Risk" style="font-weight: bold"/>
+                <p:column style="width: 40%">
+                    <p:outputLabel value="Asset Allocation" style="font-weight: bold"/>
                 </p:column>
-                <p:column style="text-align: left; width: 70%">
+                <p:column style="text-align: left; width: 60%">
 <!--
                     <p:spinner value="" min="0" max="100" maxlength="3" size="3"
-                               valueChangeListener="" update=":advisorEditForm:workArea"/>
+                               valueChangeListener="" update=":advisorEditForm:workArea">
+                    </p:spinner>
 -->
-                    <h:inputHidden id="portfolioSlider" value="#{cepb.portfolioIndex}" />
-                    <p:slider for="portfolioSlider" style="width: 70%">
-                        <p:ajax event="slideEnd" listener="#{cepb.onPortfolioSlider}" update=":advisorEditForm:workArea,:advisorEditForm:dPanel1"/>
+                    <h:inputHidden id="allocSlider" value="#{cepb.allocationIndex}" />
+                    <p:slider for="allocSlider" style="width: 90%">
+                        <p:ajax event="slideEnd" listener="#{cepb.onAllocSlider}" update=":advisorEditForm:workArea,:advisorEditForm:dPanel1"/>
                     </p:slider>
 
                 </p:column>
@@ -35,18 +36,17 @@
                 </p:column>
             </p:row>
         </p:panelGrid>
-        <p:tabView widgetVar="detailTabView"
-                   style="border: 1px solid black;"
+        <p:tabView widgetVar="graphTabView"
+                   styleClass="charts"
                    dynamic="true" cache="false">
-            <p:tab title="Summary">
-                <ui:include src="/pages/consumer/subclassdetails.xhtml"/>
+            <p:tab id="graphtab1" title="Allocation">
+                <ui:include src="/pages/consumer/saved/pieChart.xhtml"/>
             </p:tab>
 
-            <p:tab title="Portfolio">
-                <ui:include src="/pages/consumer/portfoliodetails.xhtml"/>
+            <p:tab id="graphtab2" title="Projection" disabled="true">
+                <ui:include src="/pages/consumer/saved/lineChart.xhtml"/>
             </p:tab>
         </p:tabView>
-
     </p:outputPanel>
 </h:body>
 </html>
