--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/rightPanel.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/rightPanel.xhtml
@@ -42,8 +42,8 @@
                 <div class="Container10 Responsive0" style="height:1px;"></div>
                 <div class="Container80 Responsive100">
                     <div class="Container50  Fleft Responsive50">
-                        <div class="TexAlCenter">
-                        <h1>#{tcmpb.fixedModelName}</h1>
+                        <div class="TexAlCenter tcm-graphType">
+                        #{tcmpb.fixedModelName}
                         </div>
                         <div class="Container100">
                             <p:chart type="pie" model="#{tcmpb.charts.pieChart}" styleClass="PieGraphPosition"
